--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ end: 2019-07-25
 published: 2020-08-06
 url: http://proceedings.mlr.press
 layout: proceedings
+publisher: PMLR
 series: Proceedings of Machine Learning Research
 issn: 2640-3498
 id: UAI2019
