--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ year: '2019'
 start: 2019-07-22
 end: 2019-07-25
 published: 2020-08-06
-url: http://proceedings.mlr.press
+url: https://proceedings.mlr.press
 layout: proceedings
 publisher: PMLR
 series: Proceedings of Machine Learning Research
